--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
     <!-- style css -->
     <link rel="stylesheet" href="style/style.css" />
-    <link rel="stylesheet" href="boostrap/css/bootstrap.css" />
+    <!-- <link rel="stylesheet" href="boostrap/css/bootstrap.css" /> -->
+    <!-- <link rel="stylesheet" href="boostrap/css/bootstrap-utilities.css" /> -->
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light py-3">
@@ -165,9 +166,9 @@
     </section>
     <!-- akhir our gallery -->
 
-    <!-- SCRIPT BOOSTRAP -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-    <script src="boostrap/js/bootstrap.js"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- <script src="boostrap/js/bootstrap.bundle.js"></script> -->
     <script src="script/script.js"></script>
   </body>
 </html>
