--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>yayasan</title>
-
     <!-- style css -->
     <link rel="stylesheet" href="style/style.css" />
     <!-- <link rel="stylesheet" href="boostrap/css/bootstrap.css" /> -->
@@ -21,23 +20,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item px-2">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+            <li class="nav-item">
+              <a class="nav-link bold" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item px-2">
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">What We Do</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">Our Schedul</a>
+              <a class="nav-link" href="What-We-Do.html">What We Do</a>
             </li>
             <li class="nav-item px-2">
               <a class="nav-link" href="#">Gallery</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link contact" href="#">Contact</a>
+              <a class="nav-link" href="#">Our Schedul</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link contact" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -93,7 +92,7 @@
       <h1 class="text-center text-white">What We Do?</h1>
       <p class="text-center text-white container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eligendi odio debitis?</p>
       <div class="buttons text-center">
-        <a class="button" href="#">View All</a>
+        <a class="button" href="What-We-Do.html">View All</a>
       </div>
     </section>
     <!-- akhir section what we do -->
@@ -165,6 +164,193 @@
       </div>
     </section>
     <!-- akhir our gallery -->
+
+    <!-- section sertifikat -->
+    <section class="sertifikat text-center bg-success p-4 mt-5">
+      <h1>Sertifikat Dan Penghargaan</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus autem mollitia blanditiis praesentium laudantium.</p>
+      <div class="sertifikat d-flex justify-content-around flex-wrap container">
+        <img src="gambar/sertif.png" class="mt-4" alt="sertif" style="max-width: 300px" />
+        <img src="gambar/sertif.png" class="mt-4" alt="sertif" style="max-width: 300px" />
+        <img src="gambar/sertif.png" class="mt-4" alt="sertif" style="max-width: 300px" />
+        <img src="gambar/sertif.png" class="mt-4" alt="sertif" style="max-width: 300px" />
+        <img src="gambar/sertif.png" class="mt-4" alt="sertif" style="max-width: 300px" />
+        <img src="gambar/sertif.png" class="mt-4" alt="sertif" style="max-width: 300px" />
+      </div>
+    </section>
+    <!-- akhir section sertifikat -->
+
+    <!-- section our schedule -->
+    <section class="schedule container p-4">
+      <h1 class="text-center">Our Schedule</h1>
+      <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis beatae qui hic veritatis debitis!</p>
+      <div class="container-schedule">
+        <div class="list-schedule">
+          <ol>
+            <li class="hari">Senin</li>
+          </ol>
+          <ul>
+            <li>sekolah</li>
+            <li>manyapu</li>
+            <li>makan</li>
+            <li>mabuk</li>
+          </ul>
+        </div>
+        <div class="list-schedule">
+          <ol>
+            <li class="hari">Senin</li>
+          </ol>
+          <ul>
+            <li>sekolah</li>
+            <li>manyapu</li>
+            <li>makan</li>
+            <li>mabuk</li>
+          </ul>
+        </div>
+        <div class="list-schedule">
+          <ol>
+            <li class="hari">Senin</li>
+          </ol>
+          <ul>
+            <li>sekolah</li>
+            <li>manyapu</li>
+            <li>makan</li>
+            <li>mabuk</li>
+          </ul>
+        </div>
+        <div class="list-schedule">
+          <ol>
+            <li class="hari">Senin</li>
+          </ol>
+          <ul>
+            <li>sekolah</li>
+            <li>manyapu</li>
+            <li>makan</li>
+            <li>mabuk</li>
+          </ul>
+        </div>
+        <div class="list-schedule">
+          <ol>
+            <li class="hari">Senin</li>
+          </ol>
+          <ul>
+            <li>sekolah</li>
+            <li>manyapu</li>
+            <li>makan</li>
+            <li>mabuk</li>
+          </ul>
+        </div>
+        <div class="list-schedule">
+          <ol>
+            <li class="hari">Senin</li>
+          </ol>
+          <ul>
+            <li>sekolah</li>
+            <li>manyapu</li>
+            <li>makan</li>
+            <li>mabuk</li>
+          </ul>
+        </div>
+        <div class="list-schedule">
+          <ol>
+            <li class="hari">Senin</li>
+          </ol>
+          <ul>
+            <li>sekolah</li>
+            <li>manyapu</li>
+            <li>makan</li>
+            <li>mabuk</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- akhir section our schedule -->
+
+    <!-- section bergabung dan mendukung -->
+    <section class="bergabung-dan-mendukung bg-success container p-4">
+      <h1 class="text-center">Bergabung dan mendukung</h1>
+      <p class="text-center mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga perspiciatis hic itaque tempora consequatur dicta.</p>
+      <div class="content-bergabung-mendukung">
+        <div class="no-rekening">
+          <div class="norek">
+            <h5>bergabung dan mendukung</h5>
+            <p class="m-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos fuga, a hic eligendi reiciendis vitae quas quia.</p>
+            <button class="py-2 px-5 border-0 rounded mt-3">Transfer</button>
+          </div>
+        </div>
+        <div class="informasi">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos ad illo error, vel dolores consequatur animi nam temporibus, amet eius placeat eveniet molestias. Dolores architecto rerum magnam, omnis eveniet eum
+          earum eius. Architecto quia omnis perferendis velit inventore eum blanditiis repellat reprehenderit vel minus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos ad illo error,quia omnis perferendis
+          velit inventore eum blanditiis repellat reprehenderit vel minus?
+        </div>
+      </div>
+    </section>
+    <!-- akhir section bergabung dan mendukung -->
+
+    <!-- section kebijakan dan privasi -->
+    <section class="kebijakan-dan-privasi container bg-danger p-4">
+      <h1 class="text-center">Kebijakan privasi</h1>
+      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ad aut soluta earum.</p>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Kebijakan 1</button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well
+              as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>,
+              though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item mt-3">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Kebijakan 2</button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as
+              well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+              <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item mt-3">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Kebijakan 3</button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well
+              as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>,
+              though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir section kebijakan dan privasi -->
+
+    <!-- section testimoni -->
+    <section class="testimoni">
+      <h1>Testimoni</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus minus animi illum qui.</p>
+      <div class="list-testimoni container">
+        <div class="testimonis">
+          <h4>Putra Dwi</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit libero aperiam similique at reiciendis in eligendi iure qui fuga quis?</p>
+          <div class="star">
+            <img src="gambar/Star 1.png" alt="" />
+            <img src="gambar/Star 1.png" alt="" />
+            <img src="gambar/Star 1.png" alt="" />
+            <img src="gambar/Star 1.png" alt="" />
+            <img src="gambar/Star 1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir section testimoni -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
