--- a/What-We-Do.html
+++ b/What-We-Do.html
@@ -4,8 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <!-- link css -->
+    <link rel="stylesheet" href="style/style.css" />
+
+    <!-- link boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light py-3">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#home">Yayasan</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link bold" aria-current="page" href="index.html#home">Home</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="index.html#about">About</a>
+            </li>
+            <li class="nav-item px-2">
+              <div class="btn-group mt-2">
+                <a href="#what-we-do" class="buttons fw-bold" type="button">What We Do</a>
+                <button type="button" class="arrows dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a href=""></a>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a href="#pendidikan">Pendidikan</a></li>
+                  <li><a href="#seni-budaya">Seni dan budaya</a></li>
+                  <li><a href="#lingkungan">Lingkungan</a></li>
+                </ul>
+              </div>
+              <!-- <a class="nav-link" href="What-We-Do.html">What We Do</a> -->
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="index.html#gallery">Gallery</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="index.html#schedule">Our Schedul</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link contact" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <h1>halaman what we do</h1>
+    <section id="pendidikan">
+      <h1>pendidikan</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione similique quos, nulla accusantium facilis atque ipsa, veniam alias at reiciendis deserunt quae. Rerum totam expedita architecto id fugit officiis necessitatibus.
+    </section>
+    <section id="seni-budaya">
+      <h1>seni dan budaya</h1>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore illo distinctio est unde sit perferendis numquam saepe, consequuntur harum voluptate dolorum a officiis, repellat veritatis. Enim explicabo in quia perspiciatis?</p>
+    </section>
+    <section id="lingkungan">
+      <h1>lingkungan</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus aperiam atque cum cumque vero vel consequuntur culpa recusandae saepe aliquid mollitia molestiae ullam illum soluta in harum praesentium laborum alias, minima molestias
+        inventore laudantium? Magni dicta quis dolore quam porro?
+      </p>
+    </section>
+
+    <!-- script js boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
