--- a/index.html
+++ b/index.html
@@ -14,36 +14,47 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light py-3">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="#">Yayasan</a>
+        <a class="navbar-brand fw-bold" href="#home">Yayasan</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link bold" aria-current="page" href="#">Home</a>
+              <a id="link" class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">About</a>
+            <li class="nav-item">
+              <a id="link" class="nav-link" href="#about">About</a>
             </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="What-We-Do.html">What We Do</a>
+            <li class="nav-item">
+              <div class="btn-group">
+                <a href="#what-we-do" class="buttons fw-bold nav-link" type="button">What We Do</a>
+                <button type="button" class="arrows dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a href=""></a>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a href="What-We-Do.html#pendidikan">Pendidikan</a></li>
+                  <li><a href="What-We-Do.html#seni-budaya">Seni dan budaya</a></li>
+                  <li><a href="What-We-Do.html#lingkungan">Lingkungan</a></li>
+                </ul>
+              </div>
+              <!-- <a id="link" class="nav-link" href="What-We-Do.html">What We Do</a> -->
             </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">Gallery</a>
+            <li class="nav-item">
+              <a id="link" class="nav-link" href="#gallery">Gallery</a>
             </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">Our Schedul</a>
+            <li class="nav-item">
+              <a id="link" class="nav-link" href="#schedule">Our Schedul</a>
             </li>
-            <li class="nav-item px-2">
-              <a class="nav-link contact" href="contact.html">Contact</a>
+            <li class="nav-item">
+              <a id="link" class="nav-link contact" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <section class="halaman-utama container">
+    <section class="halaman-utama container" id="home">
       <div class="informasi">
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. In nostrum non, consequuntur tenetur odio ad vel quisquam aut praesentium culpa, rerum fuga. Eius harum eaque dicta laborum, minus ullam eos laboriosam aut modi, ste
@@ -58,8 +69,8 @@
     <!-- akhir sectin home -->
     <!--  -->
     <!-- section about -->
-    <section class="about">
-      <h1 class="text-center pt-3 pb-5 mt-5">About Us</h1>
+    <section class="about pt-5" id="about">
+      <h1 class="text-center pt-3 pb-5">About Us</h1>
       <div class="about-informasi d-flex container align-items-center">
         <div class="informasi">
           <p class="p">
@@ -88,7 +99,7 @@
     <!-- akhir section about -->
 
     <!-- section what we do -->
-    <section class="what-we-do d-flex align-items-center flex-column justify-content-center">
+    <section class="what-we-do d-flex align-items-center flex-column justify-content-center" id="what-we-do">
       <h1 class="text-center text-white">What We Do?</h1>
       <p class="text-center text-white container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eligendi odio debitis?</p>
       <div class="buttons text-center">
@@ -98,8 +109,8 @@
     <!-- akhir section what we do -->
 
     <!-- our gallery -->
-    <section class="our-gallery container">
-      <h1 class="text-center mt-4">Our Gallery</h1>
+    <section class="our-gallery container pt-5" id="gallery">
+      <h1 class="text-center mt-3">Our Gallery</h1>
       <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ipsum a, suscipit nulla libero voluptatibus.</p>
 
       <!-- gambar -->
@@ -166,7 +177,7 @@
     <!-- akhir our gallery -->
 
     <!-- section sertifikat -->
-    <section class="sertifikat text-center bg-success p-4 mt-5">
+    <section class="sertifikat text-center bg-success p-4 mt-5" id="sertifikat">
       <h1>Sertifikat Dan Penghargaan</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus autem mollitia blanditiis praesentium laudantium.</p>
       <div class="sertifikat d-flex justify-content-around flex-wrap container">
@@ -181,8 +192,8 @@
     <!-- akhir section sertifikat -->
 
     <!-- section our schedule -->
-    <section class="schedule container p-4">
-      <h1 class="text-center">Our Schedule</h1>
+    <section class="schedule container p-4 pt-5" id="schedule">
+      <h1 class="text-center mt-3">Our Schedule</h1>
       <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis beatae qui hic veritatis debitis!</p>
       <div class="container-schedule">
         <div class="list-schedule">
@@ -267,7 +278,7 @@
     <!-- akhir section our schedule -->
 
     <!-- section bergabung dan mendukung -->
-    <section class="bergabung-dan-mendukung bg-success container p-4">
+    <section class="bergabung-dan-mendukung bg-success container p-4" id="bergabung-dan-mendukung">
       <h1 class="text-center">Bergabung dan mendukung</h1>
       <p class="text-center mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga perspiciatis hic itaque tempora consequatur dicta.</p>
       <div class="content-bergabung-mendukung">
@@ -288,7 +299,7 @@
     <!-- akhir section bergabung dan mendukung -->
 
     <!-- section kebijakan dan privasi -->
-    <section class="kebijakan-dan-privasi container bg-danger p-4">
+    <section class="kebijakan-dan-privasi container bg-danger p-4" id="privasi">
       <h1 class="text-center">Kebijakan privasi</h1>
       <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ad aut soluta earum.</p>
       <div class="accordion" id="accordionExample">
@@ -352,6 +363,7 @@
     </section>
     <!-- akhir section testimoni -->
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- <script src="boostrap/js/bootstrap.bundle.js"></script> -->
